# app/Http/Controllers/Api/About/AboutController.php
@@ -53,6 +53,8 @@ class AboutController extends Controller
      *                 @OA\Property(property="title", type="string", example="Qui sommes-nous ?"),
      *                 @OA\Property(property="description", type="string", example="Notre entreprise existe depuis..."),
      *                 @OA\Property(property="objective", type="string", example="Fournir un service de qualité"),
+     *                 @OA\Property(property="assignment", type="string", example="Fournir un service de qualité"),
+     *                 @OA\Property(property="vision", type="string", example="Fournir un service de qualité"),
      *                 @OA\Property(property="address", type="string", example="Kinshasa, RDC"),
      *                 @OA\Property(property="instagram", type="string", example="https://instagram.com/entreprise"),
      *                 @OA\Property(property="facebook", type="string", example="https://facebook.com/entreprise"),
@@ -85,13 +87,15 @@ class AboutController extends Controller
         $validator = Validator::make($request->all(), [
             'title' => 'required|string|max:255',
             'description' => 'required|string',
-            'objective' => 'required|string',
-            'address' => 'nullable|string|max:150',
-            'instagram' => 'nullable|string|max:150',
+            'objective' => 'nullable|string',
+            'assignment' => 'nullable|string',
+            'vision' => 'nullable|string',
+            'address' => 'nullable|string',
+            'instagram' => 'nullable|string',
             'facebook' => 'nullable|string|max:150',
-            'twitter' => 'nullable|string|max:150',
-            'linkedin' => 'nullable|string|max:150',
-            'youtube' => 'nullable|string|max:150',
+            'twitter' => 'nullable|string',
+            'linkedin' => 'nullable|string',
+            'youtube' => 'nullable|string',
             'phone' => 'required|string|max:50',
             'email' => 'required|email|max:150',
             'experience' => 'required|string',
@@ -151,6 +155,8 @@ class AboutController extends Controller
      *                 @OA\Property(property="title", type="string"),
      *                 @OA\Property(property="description", type="string"),
      *                 @OA\Property(property="objective", type="string"),
+     *                 @OA\Property(property="assignment", type="string"),
+     *                 @OA\Property(property="vision", type="string"),
      *                 @OA\Property(property="address", type="string"),
      *                 @OA\Property(property="instagram", type="string"),
      *                 @OA\Property(property="facebook", type="string"),
@@ -178,13 +184,15 @@ class AboutController extends Controller
         $validator = Validator::make($request->all(), [
             'title' => 'required|string|max:255',
             'description' => 'required|string',
-            'objective' => 'required|string',
-            'address' => 'nullable|string|max:150',
-            'instagram' => 'nullable|string|max:150',
+            'objective' => 'nullable|string',
+            'assignment' => 'nullable|string',
+            'vision' => 'nullable|string',
+            'address' => 'nullable|string',
+            'instagram' => 'nullable|string',
             'facebook' => 'nullable|string|max:150',
-            'twitter' => 'nullable|string|max:150',
-            'linkedin' => 'nullable|string|max:150',
-            'youtube' => 'nullable|string|max:150',
+            'twitter' => 'nullable|string',
+            'linkedin' => 'nullable|string',
+            'youtube' => 'nullable|string',
             'phone' => 'required|string|max:50',
             'email' => 'required|email|max:150',
             'experience' => 'required|string',
